force-app/main/default/objects/Airport__c/Airport__c.object-meta.xml
<CustomObject>
    <label>Airport</label>
    <nameField>
        <label>IATA Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Airport</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>