force-app/main/default/objects/Airport__c/fields/Operational_Status__c.field-meta.xml
<CustomField>
    <fullName>Operational_Status__c</fullName>
    <label>Operational Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Operational</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>